cmake_minimum_required(VERSION 3.16)
project(boost_socks5)

include_directories(
    /usr/include/
)
link_directories(
    /usr/lib/
)

macro(add_custom_exe TARGET_NAME)
    # message("+------------------------------------------------------------+")
    # message("| --> ARGV: <<< ${ARGV} >>>")
	message("+------------------------------------------------------------+")
    message("| --> TARGET_NAME: <<< ${TARGET_NAME} >>>")
	message("+------------------------------------------------------------+")
    add_executable(${ARGV}
    )
    target_include_directories(${TARGET_NAME} PRIVATE
        ${CMAKE_SOURCE_DIR}/include
    )
    target_link_libraries(${TARGET_NAME} PRIVATE
        pthread
        ssl
        crypto
        boost_thread
    )
    target_compile_features(${TARGET_NAME} PRIVATE
        cxx_std_17
    )
endmacro()

add_custom_exe(boost_socks5
    ${CMAKE_SOURCE_DIR}/boost_socks5.cpp
)